<resources>
    <string name="app_name">Rec</string>
    <string name="rec">REC</string>
    <string name="geraldine_garcia_lopez">Geraldine García López</string>
    <string name="texto_bienvenida">Inicia una nueva aventura con REC y descubre una nueva manera de ver el mundo.</string>
    <string name="comienza">Comienza</string>
    <string name="registrate">Regístrate</string>
    <string name="texto_inicia_sesion">La aventura está por iniciar, por favor inicia sesión</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="ingresar">Ingresar</string>
    <string name="recupera_tu_contrasena">Recupera Tu Contraseña</string>
    <string name="ingresa_con_google">Ingresa con Google</string>
    <string name="no_tienes_cuenta">No tienes cuenta?</string>
    <string name="usuario">Usuario</string>
    <string name="crea_tu_cuenta">Crea tu cuenta</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="contrasena_crear_cuenta">Contraseña</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="t_y_c">Acepto los términos y condiciones</string>
    <string name="ya_tienes_cuenta_inicia_sesion">¿Ya tienes cuenta? Inicia Sesión</string>
    <string name="inicio">Inicio</string>
    <string name="catalogo">Catálogo</string>
    <string name="favoritos">Favoritos</string>
    <string name="perfil">Perfil</string>
    <string name="admin">Admin</string>
    <string name="usuarios">Usuarios</string>
    <string name="ajustes">Ajustes</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="navigation_drawer_open">Abrir menú lateral</string>
    <string name="navigation_drawer_close">Cerrar menú lateral</string>
    <string name="imagen_de_usuario">Logo de Usuario</string>
    <string name="geral">Geral</string>
    <string name="estudiante">Estudiante</string>
    <string name="nombre_del_equipo">Nombre del Equipo</string>
    <string name="Precio_detalle">$ 0.00</string>
    <string name="Descripcion_detallada">Descripción detallada del equipo de grabación...</string>
    <string name="agregar_al_carrito">Añadir al Carrito</string>
    <string name="texto_favoritos">Aquí verás tus equipos favoritos de Rec</string>
    <string name="mi_carrito_de_compras">Mi carrito de compras</string>
    <string name="productos_sin_agregar">Aún no has añadido equipos.</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="ingresar_con_huella">Ingresar con Huella</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="guardar_cambios">Guardar Cambios</string>
</resources>