<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_fondo"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <ImageView
        android:layout_width="125dp"
        android:layout_height="152dp"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/nomapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rec"
        android:textColor="@color/rojo_coral"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textBienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_bienvenida"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btn_comienza"
        android:layout_width="260dp"
        android:layout_height="65dp"
        android:text="@string/comienza"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/rojo_coral"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/tv_registrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrate"
        android:textColor="@color/rojo_coral"
        android:textSize="22sp"
        android:layout_marginTop="20dp"/>

</LinearLayout>