<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/crea_tu_cuenta"
            android:textColor="#F74E51"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/user" />

            <EditText
                android:id="@+id/et_nombres"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/nombres"
                android:paddingStart="15dp"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <EditText
                android:id="@+id/et_apellidos"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/apellidos"
                android:paddingStart="15dp"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/user" /> <EditText
            android:id="@+id/et_correo"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/bg_edittext"
            android:hint="@string/correo_electr_nico"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/et_password_reg"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/contrasena_crear_cuenta"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/confirmar_contrasena"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:textColor="#000000" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/check_terminos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:buttonTint="#F74E51"
            android:text="@string/t_y_c"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button_registrar"
            android:layout_width="220dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#F74E51"
            android:text="@string/registrate"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_volver_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/ya_tienes_cuenta_inicia_sesion"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>