<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    tools:context=".activities.HomeActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="125dp"
        android:layout_height="152dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/nomapp"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:text="@string/rec"
        android:textAlignment="center"
        android:textColor="#F74E51"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/textBienvenida"
        android:layout_width="375dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:text="@string/texto_bienvenida"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomapp"
        app:layout_constraintVertical_bias="0.225" />

    <Button
        android:id="@+id/button_comienza"
        android:layout_width="259dp"
        android:layout_height="69dp"
        android:backgroundTint="#F74E51"
        android:text="@string/comienza"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBienvenida"
        app:layout_constraintVertical_bias="0.452" />

    <TextView
        android:id="@+id/tv_registrate"
        android:layout_width="145dp"
        android:layout_height="39dp"
        android:text="@string/registrate"
        android:textAlignment="center"
        android:textColor="#F74E51"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_comienza" />
</androidx.constraintlayout.widget.ConstraintLayout>