<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp"
    app:strokeColor="@color/white"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:background="@color/white"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imgProducto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerInside"
            android:layout_marginBottom="10dp"
            android:src="@drawable/camara_de_video" />

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_equipo"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:maxLines="2"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/txtPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Precio_detalle"
            android:textSize="14sp"
            android:textColor="@color/verde_precios"
            android:textStyle="bold"
            android:layout_marginTop="6dp"/>

        <Button
            android:id="@+id/btnAgregarCarrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/agregar_al_carrito"
            android:textSize="11sp"
            android:textAllCaps="false"
            android:backgroundTint="@color/rojo_coral"
            android:textColor="@color/white"
            app:cornerRadius="12dp"/>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>