<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/nomapp"
        android:layout_width="170dp"
        android:layout_height="49dp"
        android:text="@string/rec"
        android:textAlignment="center"
        android:textColor="#F74E51"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.751"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="108dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nomapp"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tv_iniciasesion"
        android:layout_width="339dp"
        android:layout_height="78dp"
        android:text="@string/texto_inicia_sesion"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomapp"
        app:layout_constraintVertical_bias="0.145" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="46dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_iniciasesion"
        app:layout_constraintVertical_bias="0.094"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="38dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/password" />

    <EditText
        android:id="@+id/editText_user"
        android:layout_width="268dp"
        android:layout_height="36dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:hint="Usuario"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="#000000"
        android:textColorHint="#888888"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/tv_iniciasesion" />

    <Button
        android:id="@+id/button_ingresar"
        android:layout_width="182dp"
        android:layout_height="50dp"
        android:layout_marginBottom="212dp"
        android:backgroundTint="#F74E51"
        android:text="@string/ingresar"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_user"
        app:layout_constraintVertical_bias="0.833" />

    <TextView
        android:id="@+id/Recpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recupera_tu_contrasena"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ingresar"
        app:layout_constraintVertical_bias="0.139" />

    <Button
        android:id="@+id/IngresaGoogle"
        android:layout_width="317dp"
        android:layout_height="62dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/ingresa_con_google"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Recpassword"
        app:layout_constraintVertical_bias="0.201" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="56dp"
        android:layout_height="53dp"
        app:layout_constraintBottom_toBottomOf="@+id/IngresaGoogle"
        app:layout_constraintEnd_toEndOf="@+id/IngresaGoogle"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="@+id/IngresaGoogle"
        app:layout_constraintTop_toTopOf="@+id/IngresaGoogle"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/google" />

    <TextView
        android:id="@+id/tv_no_tiene_cuenta"
        android:layout_width="200dp"
        android:layout_height="24dp"
        android:text="@string/no_tienes_cuenta"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IngresaGoogle"
        app:layout_constraintVertical_bias="0.491" />

    <TextView
        android:id="@+id/Registrate"
        android:layout_width="119dp"
        android:layout_height="23dp"
        android:text="@string/registrate"
        android:textColor="#F74E51"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_no_tiene_cuenta"
        app:layout_constraintTop_toBottomOf="@+id/IngresaGoogle" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="#000000"
        android:textColorHint="#888888"
        app:layout_constraintStart_toEndOf="@id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_user" />

</androidx.constraintlayout.widget.ConstraintLayout>